--- a/INDEX.html
+++ b/INDEX.html
@@ -1,4 +1,4 @@
 <html>
-<Title>using github deployed files EAST </Title>
-<Body>using github deployed files EAST US</body>
+<Title>using github deployed files west US</Title>
+<Body> Traffic manager West US VM03</body>
 </HTML>
